@@ -36,6 +36,8 @@ Bug Fixes:
 - Main Interface
 	Moved the Tech text down 2 pixels so that it now lines up with the GG and GP bars
 	Era Text and Great Person Bar hidden in Hide Interface and WorldBuilder modes
+- Scoreboard
+	Number of cities hidden in OCC and for rivals you cannot contact
 - City Screen
 	Production bar tick marks count food for Workers/Settlers correctly
 	Anger Counter hidden for foreign cities because you cannot see Whip/Draft button hovers
